added controllers for exchange rates
